fix: Scrollbar in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,24 +8,15 @@
   }
 
   .scrollbar::-webkit-scrollbar-track {
-    background: #f2f2f2;
-    .dark & {
-      background: #151617;
-    }
+    background: hsl(var(--muted));
   }
 
   .scrollbar::-webkit-scrollbar-thumb {
-    background: #d8dadc;
-    .dark & {
-      background: #363636;
-    }
+    background: hsla(var(--muted-foreground) / 0.25);
   }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
-    background: #c2c4c6;
-    .dark & {
-      background: #454749;
-    }
+    background: hsla(var(--muted-foreground) / 0.5);
   }
 }
 
